--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -1,28 +1,18 @@
-<div class="container mt-4">
-  <div class="row">
-    <!-- Product Image -->
-    <div class="col-md-6">
-      <img
-        *ngIf="product?.img"
-        [src]="product?.img"
-        class="img-fluid rounded"
-        alt="{{ product?.productName }}"
-      />
-    </div>
-
+<div class="container mt-4" *ngIf="product; else loadingTemplate">
+  <div class="row" style="justify-content: center">
     <!-- Product Details -->
-    <div class="col-md-6">
-      <h2>{{ product?.productName }}</h2>
-      <p class="lead">{{ product?.description }}</p>
-      <p><strong>Price:</strong> ${{ product?.price }}</p>
+    <div class="col-md-4">
+      <h2>{{ product.productName }}</h2>
+      <p class="lead">{{ product.description }}</p>
+      <p><strong>Price:</strong> ${{ product.price }}</p>
       <p>
         <strong>Quantity in Stock:</strong>
-        {{ product?.quantityInStock || "Not available" }}
+        {{ product.quantityInStock || "Not available" }}
       </p>
 
       <!-- Add to Shopping List Button -->
-      <button type="button" class="btn btn-primary">
-        Add to Shopping List
+      <button type="button" class="btn btn-primary" (click)="addToCart()">
+        Add to Cart
       </button>
 
       <!-- Additional Details (customize as needed) -->
@@ -31,5 +21,22 @@
         <!-- Add more details as needed -->
       </div>
     </div>
+
+    <!-- Product Image -->
+    <div class="col-md-4">
+      <img
+        *ngIf="product.img"
+        [src]="product.img"
+        class="img-fluid rounded"
+        alt="{{ product.productName }}"
+      />
+    </div>
   </div>
 </div>
+
+<ng-template #loadingTemplate>
+  <div class="loading-container">
+    <div class="spinner"></div>
+    <p>Loading...</p>
+  </div>
+</ng-template>
