--- a/src/app/products/product-list/product-item/product-item.component.html
+++ b/src/app/products/product-list/product-item/product-item.component.html
@@ -21,14 +21,6 @@
       <strong>Quantity in Stock:</strong>
       {{ product.quantityInStock || "Not available" }}
     </p>
-
-    <button
-      type="button"
-      class="btn btn-primary mx-auto"
-      (click)="showReviews()"
-    >
-      Show Reviews
-    </button>
   </div>
 
   <div class="hover-overlay" *ngIf="hover"></div>
@@ -38,11 +30,11 @@
       <button
         type="button"
         class="btn btn-secondary mr-2"
-        [routerLink]="[product.id]"
+        (click)="onDetailsClicked()"
       >
         Details
       </button>
-      <button type="button" class="btn btn-danger">Button 2</button>
+      <button type="button" class="btn btn-danger">Reviews</button>
     </div>
   </div>
 </div>
