--- a/src/app/products/product-list/product-item/product-item.component.html
+++ b/src/app/products/product-list/product-item/product-item.component.html
@@ -34,7 +34,9 @@
       >
         Details
       </button>
-      <button type="button" class="btn btn-danger">Reviews</button>
+      <button type="button" class="btn btn-danger" (click)="onReviewsClicked()">
+        Reviews
+      </button>
     </div>
   </div>
 </div>
