--- a/src/app/products/product-list/product-item/product-item.component.less
+++ b/src/app/products/product-list/product-item/product-item.component.less
@@ -9,8 +9,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(255, 255, 255, 0.75); /* Adjust the transparency as needed */
-  z-index: 1; /* Ensure it's above the card content */
+  background: rgba(255, 255, 255, 0.75);
+  z-index: 1;
   opacity: 0;
   transition: opacity 0.3s ease-out;
 }
@@ -20,7 +20,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 2; /* Ensure buttons are above the overlay */
+  z-index: 2;
   opacity: 0;
   transition: opacity 0.3s ease-out;
 }
@@ -30,7 +30,7 @@
 }
 
 .button-container button {
-  margin-right: 10px; /* Adjust spacing between buttons as needed */
+  margin-right: 10px;
 }
 
 .card:hover .hover-overlay,
@@ -39,7 +39,7 @@
 }
 
 .centered-image {
-  height: 200px; /* Set your desired height */
+  height: 200px;
   width: auto;
   display: block;
   margin: 0 auto;
