--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -25,6 +25,7 @@
           src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKxNNktnMVr7eUEx88-iU9jM69kK9DUDddVA&usqp=CAU"
           height="30"
           loading="lazy"
+          (click)="onLogoClick()"
         />
       </a>
 
@@ -39,15 +40,14 @@
     </div>
 
     <div class="d-flex align-items-center">
-      <div class="dropdown">
-        <a
-          data-mdb-dropdown-init
+      <div style="margin-right: 15px">
+        <a>
+          <!-- data-mdb-dropdown-init
           class="text-reset me-3 dropdown-toggle hidden-arrow"
           [routerLink]="['/cart']"
           id="navbarDropdownMenuLink"
-          role="button"
-          aria-expanded="false"
-        >
+          role="button"                                         ova zakomentiranovo treba vnatre vo <a> tag da odi
+          aria-expanded="false" -->
           <span
             class="badge rounded-pill badge-notification bg-danger"
             *ngIf="cartSize > 0"
@@ -55,7 +55,7 @@
           >
           <i class="fa fa-shopping-cart"></i>
         </a>
-        <ul
+        <!-- <ul
           class="dropdown-menu dropdown-menu-end"
           aria-labelledby="navbarDropdownMenuLink"
         >
@@ -68,11 +68,15 @@
           <li>
             <a class="dropdown-item" href="#">Something else here</a>
           </li>
-        </ul>
+        </ul> -->
       </div>
 
-      <div class="dropdown">
-        <a
+      <div
+        class="dropdown"
+        *ngIf="getAuthService().isAuthenticated(); else loginTemp"
+      >
+        {{ getAuthService().getUsername() }}
+        <!-- <a
           data-mdb-dropdown-init
           class="dropdown-toggle d-flex align-items-center hidden-arrow"
           href="#"
@@ -93,16 +97,18 @@
           aria-labelledby="navbarDropdownMenuAvatar"
         >
           <li>
-            <a class="dropdown-item" href="#">My profile</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#">Settings</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#">Logout</a>
-          </li>
-        </ul>
+            <a class="dropdown-item"> tuka username da go pokazuvam </a>
+          </li> -->
+        <button class="btn btn-light" (click)="onLogoutClicked()">
+          Logout
+        </button>
+        <!-- </ul> -->
       </div>
+
+      <ng-template #loginTemp
+        ><button class="btn btn-light" routerLink="/login">Login</button>
+        <button class="btn btn-light" routerLink="/signup">Register</button>
+      </ng-template>
     </div>
   </div>
 </nav>
