--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="container">
+  <div class="row" style="justify-content: center">
+    <img
+      style="border-radius: 30%"
+      src="https://images.unsplash.com/photo-1576941089067-2de3c901e126?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTJ8fHxlbnwwfHx8fHw%3D"
+    />
+  </div>
+</div>
